Ensure that header vertical spacing is always 2:1, even between adjacent headers (ish)

--- a/css/layout.css
+++ b/css/layout.css
@@ -185,6 +185,7 @@ h6,
 
 h1 {
 	margin-top: max(1.2em, 1rem);
+	margin-bottom: max(0.6em, 0.5rem);
 }
 
 h2,
@@ -193,6 +194,15 @@ h4,
 h5,
 h6 {
 	margin-top: max(1.8em, 1rem);
+	margin-bottom: max(0.9em, 0.5rem);
+}
+
+h1 + h2,
+h2 + h3,
+h3 + h4,
+h4 + h5,
+h5 + h6 {
+	margin-top: 0;
 }
 
 h1 a,
